<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:background="#4CE705" >

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:textColor="#000"
        android:textSize="16sp"
        android:layout_marginStart="8dp"/>
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_name"
        android:layout_marginTop="35dp"
        android:layout_toRightOf="@+id/locationCitm"
        android:textColor="#000"
        android:textSize="20sp"
        android:layout_marginLeft="15dp" />

    <TextView
        android:id="@+id/locationCitm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="20sp"
        android:text="@string/location"
        android:layout_marginTop="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp" />

    <ImageSwitcher
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="false" >
        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profile"
            android:layout_gravity="fill"/>
    </ImageSwitcher>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:layout_marginTop="55dp"
            android:layout_marginLeft="8dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_marginStart="8dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/productQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productQ"
            android:layout_marginTop="55dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_marginTop="55dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>