<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/emailtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="@string/email"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:fontFamily="sans-serif" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_below="@+id/emailtxt"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text=""
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="53dp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/passtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/login_email"
        android:text="@string/password"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:fontFamily="sans-serif" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_below="@+id/passtxt"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="161dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/login_password"
        android:background="@color/colorPrimary"
        android:text="@string/log_in"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:typeface="sans"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="266dp" />


    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/login_button"
        android:text="@string/create_new_account"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:fontFamily="sans-serif" />
</RelativeLayout>